# ACTA

./: .gitignore  README.md  main.py  pyproject.toml
configs/: base_config.yml  toy_scenario_001.yml  toy_tasks.csv  toy_workers.csv
configs/ga/: circle20_lam100_k20_r10_int250.yml  circle20_lam100_k20_r25_int250.yml  circle20_lam100_k20_r99_int250.yml  circle20_lam250_k20_r10_int250.yml  circle20_lam250_k20_r25_int250.yml  circle20_lam250_k20_r99_int250.yml  circle20_lam400_k20_r10_int250.yml  circle20_lam400_k20_r25_int250.yml  circle20_lam400_k20_r99_int250.yml  fib20_lam100_k20_r10_int250.yml  fib20_lam100_k20_r25_int250.yml  fib20_lam100_k20_r99_int250.yml  fib20_lam250_k20_r10_int250.yml  fib20_lam250_k20_r25_int250.yml  fib20_lam250_k20_r99_int250.yml  fib20_lam400_k20_r10_int250.yml  fib20_lam400_k20_r25_int250.yml  fib20_lam400_k20_r99_int250.yml  lattice20_lam100_k20_r10_int250.yml  lattice20_lam100_k20_r25_int250.yml  lattice20_lam100_k20_r99_int250.yml  lattice20_lam250_k20_r10_int250.yml  lattice20_lam250_k20_r25_int250.yml  lattice20_lam250_k20_r99_int250.yml  lattice20_lam400_k20_r10_int250.yml  lattice20_lam400_k20_r25_int250.yml  lattice20_lam400_k20_r99_int250.yml  sobol20_lam100_k20_r10_int250.yml  sobol20_lam100_k20_r25_int250.yml  sobol20_lam100_k20_r99_int250.yml  sobol20_lam250_k20_r10_int250.yml  (+5 more)
scripts/: acta_viz.py  batch_run.sh  batch_run_36x10.sh  batch_run_36x20.sh  batch_toy_run.sh  make_tasks.py  run_sim_once.py  weibull_test.py
tasks/: tasks_circle20.csv  tasks_fib20.csv  tasks_lattice20.csv  tasks_sobol20.csv
workers/: workers.csv
(+29 files in other folders)
